Add Dongho to Leopards

--- a/leopards.yaml
+++ b/leopards.yaml
@@ -6,8 +6,9 @@ coach: Melissa
 
 
 members:
-- Linda
-- William
-- David
-- Olivia
-- Evie
+  - Linda
+  - William
+  - David
+  - Olivia
+  - Evie
+  - Dongho
